--- a/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Perfil.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Perfil.cshtml
@@ -19,7 +19,7 @@
                 <b>Apellido(s):</b> @datos_del_usuario.Apellidos
             </li>
             <li class="list-group-item">
-                <b>Código cliente:</b> @datos_del_usuario.Id
+                <b>Código empleado:</b> @datos_del_usuario.Id
             </li>
             <li class="list-group-item">
                 <b>Telefono:</b> @datos_telefono
@@ -39,7 +39,7 @@
             <b>Ver Clientes</b>
         </a>
         <a asp-controller="Empleado" asp-action="Listado_De_Solicitudes" class="btn btn-info btn-block">
-            <b>Consultar Pedidos</b>
+            <b>Mercancias Enviadas</b>
         </a>
         <a asp-controller="Empleado" asp-action="Envio" class="btn btn-info btn-block">
             <b>Enviar Mercancia</b>
