--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Sobre_Nosotros.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Sobre_Nosotros.cshtml
@@ -12,7 +12,15 @@
 <div class="row">
     <div class="col-md-12">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In exercitationem consequuntur eos earum adipisci reprehenderit! Expedita officia aspernatur incidunt, ad omnis repudiandae impedit blanditiis maxime voluptates sequi natus obcaecati nobis?
+            Contamos con un equipo especializado así como con una red de proveedores altamente cualificados en gestión aduanera conocedores de la burocracia dominicana que se encargará del despacho de sus mercancías.
+
+            Nuestros agentes de aduanas se ocuparán de las cuestiones administrativas facilitando sus operaciones de importación y/o exportación y resolverán cualquier incidencia con la Aduana en su nombre ahorrando tiempo y costes.
+
+            Como su agente de aduanas nos comprometemos a que su carga se libere tan pronto como sea posible y nos ocupamos de los trámites aduanales en las operaciones de importación y exportación incluido:
+
+            Presentar ante la aduana la documentación requerida en cada situación para realizar el despacho de la mercancía.
+            Acudir a la Aduana como su representante en el caso de que se requiera una inspección de la carga para verificar que todo se realiza correctamente.
+            Optimizar los procesos aduaneros para reducir sus costes y tiempo.
         </p>
     </div>
 </div>
