--- a/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Listado_De_Solicitudes.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Empleado/Listado_De_Solicitudes.cshtml
@@ -9,7 +9,7 @@
         <h1>Listado de solicitudes</h1>
     </div>
     <div class="col-md-4 col-md-offset-4">
-        <form action="" method="get" class="mini_formulario_para_consultar_solicitudes">
+        <form asp-action="" asp-controller="" class="mini_formulario_para_consultar_solicitudes">
             <div class="input-group">
                     <input type="text" name="noticias" class="form-control" placeholder="No. del pedido">
                     <span class="input-group-btn">
@@ -23,27 +23,12 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              Filtrar solicitudes
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li><a href="#">Enviados</a></li>
-                <li><a href="#">Pendientes</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
 <div class="row tabla_listado_de_solicitudes">
     <div class="col-md-12">
         <table class="table">
             <tr>
                 <th>No. del servicio</th>
-                <th>Código Factura</th>
+                <th>Codigo Factura</th>
                 <th>Cantidad</th>
                 <th>Estado</th>
                 <th>Fecha del envio</th>
@@ -61,9 +46,3 @@
         </table>
     </div>
 </div>
-<!--
-    |Nombre del cliente|Cantidad|Estado   |Empleado        |Nombre del articulo|Precio|Tipo de pedido                    |
-    |Juan Jose         |25      |pendiente|Jose Fina Guzman|Lavadora                  |GATEWAY TO THE WORLD EXPRESS 10:30|
-    |Juan Jose         |25      |pendiente|Jose Fina Guzman|Lavadora                  |GATEWAY TO THE WORLD EXPRESS EASY |
-    |Juan Jose         |25      |pendiente|Jose Fina Guzman|Lavadora                  |GATEWAY TO THE WORLD EXPRESS EASY |
--->
