--- a/Sistema Aduanero/Sistema Aduanero/Views/Home/Sobre_Nosotros.cshtml
+++ b/Sistema Aduanero/Sistema Aduanero/Views/Home/Sobre_Nosotros.cshtml
@@ -3,24 +3,48 @@
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
+        <h1>
+            Sobre Nosotros
+        </h1>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, aspernatur adipisci? Reiciendis facilis dolorem quasi ratione quae eveniet, accusamus ex mollitia dicta, quas nemo, magnam earum nobis assumenda veniam consequatur!
+            Es una empresa consolidadora de carga aérea y marítima, y de gestión aduanal.
         </p>
+        <p>
+            Tenemos a su disposicion:
+        </p>
+        <ul>
+            <li>
+                Consolidadores de cargas aéreas y marítimas.
+            </li>
+            <li>
+                Agentes aduanales.
+            </li>
+            <li>
+                Asesorias.
+            </li>
+            <li>
+                Depositos fiscales.
+            </li>
+            <li>
+                Exoneraciones.
+            </li>
+            <li>
+                Exportaciones e importaciones.
+            </li>
+        </ul>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <p>
-            Contamos con un equipo especializado así como con una red de proveedores altamente cualificados en gestión aduanera conocedores de la burocracia dominicana que se encargará del despacho de sus mercancías.
-
-            Nuestros agentes de aduanas se ocuparán de las cuestiones administrativas facilitando sus operaciones de importación y/o exportación y resolverán cualquier incidencia con la Aduana en su nombre ahorrando tiempo y costes.
-
-            Como su agente de aduanas nos comprometemos a que su carga se libere tan pronto como sea posible y nos ocupamos de los trámites aduanales en las operaciones de importación y exportación incluido:
-
-            Presentar ante la aduana la documentación requerida en cada situación para realizar el despacho de la mercancía.
-            Acudir a la Aduana como su representante en el caso de que se requiera una inspección de la carga para verificar que todo se realiza correctamente.
-            Optimizar los procesos aduaneros para reducir sus costes y tiempo.
-        </p>
+    <div class="col-lg-4">
+        <h1>
+            Misión
+        </h1>
+        <p>Brindar un servicio sin limites de calidad a nivel mundial, 
+        satisfaciendo todas las necesidades de nuestros clientes, 
+        para asi establecernos como la mejor opcion en el transporte
+        de mercancia, consolidación de carga y servicios aduanales.</p>
+    </div>
+    <div class="col-lg-4">
+        <h1>Visión</h1>
+        <p>Fortalecernos a nivel nacional e internacional como empresa líder en el mercado de gestión aduanal y consolidación de carga aerea y maritima.</p>
     </div>
 </div>
